# movie_rating

./: .env.sample  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: da12e2999e38_initial_migration.py  e6c63fd6af83_cascade_delete_for_rating_to_movie_.py
postman/: movie-rating-software-design.postman_collection.json
src/movie_rating/: __main__.py
src/movie_rating/config/: __init__.py  env.py  not_configured_error.py
src/movie_rating/persistence/alchemy/: __init__.py
src/movie_rating/persistence/alchemy/mapping/: __init__.py  mapping.py
src/movie_rating/persistence/errors/: __init__.py  entity_not_found_error.py
src/movie_rating/persistence/model/: __init__.py  director.py  entity.py  genre.py  movie.py  rating.py
src/movie_rating/persistence/repo/: __init__.py  director_repo.py  genre_repo.py  movie_repo.py  rating_repo.py  repo.py
src/movie_rating/persistence/uow/: __init__.py  uow.py  uow_factory.py
src/movie_rating/service/: delete_movie_service.py  director_service.py  genre_service.py  get_movie_service.py  movie_service.py  rating_service.py  update_movie_service.py
src/movie_rating/validation/: __init__.py  alchemy.py  director.py  genre.py  invalid_entity_error.py  movie.py  rating.py
src/movie_rating/webapi/: __init__.py  setup_server.py
src/movie_rating/webapi/router/: __init__.py  delete_movie.py  get_movie.py  get_movies_with_paging.py  post_director.py  post_genre.py  post_movie.py  post_rating.py  update_movie.py
(+8 files in other folders)
